--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="active"><a href="contact.html">ontact</a></li>
+					<li class="active"><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
